--- a/app/src/main/res/layout/activity_news_list.xml
+++ b/app/src/main/res/layout/activity_news_list.xml
@@ -1,15 +1,15 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:fitsSystemWindows="true"
+    android:background="@android:color/white">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@android:color/white"
+            android:background="@color/colorPrimary"
             app:elevation="8dp"
             app:itemIconTint="@drawable/bottom_navigation_color_selector"
             app:itemTextColor="@drawable/bottom_navigation_color_selector"
@@ -59,6 +59,7 @@
         app:behavior_hideable="true"
         android:orientation="vertical"
         app:behavior_peekHeight="0dp"
+        tools:behavior_peekHeight="200dp"
         app:layout_behavior="@string/bottom_sheet_behavior">
 
         <LinearLayout
@@ -140,8 +141,6 @@
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
                 />
-
-
 
             <com.vagad.utils.fonts.CustomFontTextView
                 android:onClick="onClickGadget"
@@ -258,9 +257,6 @@
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
                 />
-
-
-
 
         </com.vagad.utils.customviews.FlowLayout>
 
