--- a/app/src/main/res/layout/fragment_report_news_list.xml
+++ b/app/src/main/res/layout/fragment_report_news_list.xml
@@ -2,15 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:background="@color/colorPrimary"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/relNoData"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible"
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -18,10 +20,11 @@
             android:gravity="center"
             android:layout_centerInParent="true"
             android:drawablePadding="10dp"
-            android:text="No News Available!"
+            android:text="@string/no_news_available"
             android:drawableLeft="@drawable/ic_newspaper"
+            app:drawableTint="@color/secondary_text"
             android:textAppearance="?android:textAppearanceLarge"
-            android:textColor="@android:color/white" />
+            android:textColor="@color/secondary_text" />
 
     </RelativeLayout>
 
@@ -39,7 +42,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
+                android:background="@android:color/white"
                 android:elevation="16dp">
 
                 <LinearLayout
@@ -57,7 +60,7 @@
                         android:text="Events/News"
                         android:textAllCaps="true"
                         android:textAppearance="?android:textAppearanceLarge"
-                        android:textColor="@android:color/white"
+                        android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:transitionName="profile" />
 
@@ -84,6 +87,7 @@
             android:paddingRight="5dp"
             android:paddingTop="5dp"
             android:paddingBottom="50dp"
+            tools:listitem="@layout/list_item_news"
              />
 
     </LinearLayout>
@@ -94,7 +98,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="?actionBarSize"
+        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
         android:elevation="8dp"
         android:src="@drawable/ic_plus" />
 
